# catalogo-api

./: .env  Dockerfile  Dockerfile.prod  db.sqlite3  dev-server.sh  docker-compose.yml  hello.py  pyproject.toml
.github/workflows/: execute-test.yml
main/: api.py  settings.py  urls.py
sales/: models.py
sales/migrations/: 0001_initial.py  0002_orderitem.py
store/: admin.py  api.py  models.py
store/controllers/: __init__.py  category.py  products.py  store.py
store/migrations/: 0001_initial.py
